# SOL-ExecBench-ROCm

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.txt  provenance.toml  pyproject.toml
.github/workflows/: code-quality.yml  evidence-integrity.yml  evidence-prepare.yml  evidence-publish.yml  evidence-revoke.yml
.omc/state/: hud-stdin-cache.json
.planning/: CDNA3-VALIDATION-HANDOFF.md  MI300X-VALIDATION-HANDOFF.md  MILESTONE-AUDIT-v1.10.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.17-MILESTONE-AUDIT.md  v1.19-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.20-MILESTONE-AUDIT.md  v1.22-MILESTONE-AUDIT.md  v1.23-MILESTONE-AUDIT.md  v1.24-MILESTONE-AUDIT.md  v1.25-MILESTONE-AUDIT.md  v1.26-MILESTONE-AUDIT.md  v1.27-MILESTONE-AUDIT.md  v1.28-MILESTONE-AUDIT.md  v1.29-MILESTONE-AUDIT.md  v1.31-CLOSURE-HANDOFF.md  v1.31-MILESTONE-AUDIT.md  v1.33-MILESTONE-AUDIT.md  v1.34-MILESTONE-AUDIT.md  v1.35-MILESTONE-AUDIT.md  v1.36-MILESTONE-AUDIT.md  v1.37-MILESTONE-AUDIT.md  v1.38-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.9-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: 260607-remote-ci-failure.md  fix-rdna4-sharded-targets.md  fix-remaining-test-failures.md  rdna4-partial-profiler-targets.md
.planning/milestones/: 1.34-REQUIREMENTS.md  1.34-ROADMAP.md  CDNA3-VALIDATION-HANDOFF.md  MI300X-VALIDATION-HANDOFF.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.10-MILESTONE-AUDIT.md  v1.10-REQUIREMENTS.md  v1.10-ROADMAP.md  v1.11-MILESTONE-AUDIT.md  v1.11-REQUIREMENTS.md  v1.11-ROADMAP.md  v1.12-MILESTONE-AUDIT.md  v1.12-REQUIREMENTS.md  v1.12-ROADMAP.md  v1.13-MILESTONE-AUDIT.md  v1.13-REQUIREMENTS.md  v1.13-ROADMAP.md  v1.14-MILESTONE-AUDIT.md  v1.14-REQUIREMENTS.md  v1.14-ROADMAP.md  v1.15-MILESTONE-AUDIT.md  v1.15-REQUIREMENTS.md  v1.15-ROADMAP.md  v1.16-MILESTONE-AUDIT.md  v1.16-REQUIREMENTS.md  v1.16-ROADMAP.md  v1.17-REQUIREMENTS.md  v1.17-ROADMAP.md  v1.18-MILESTONE-AUDIT.md  v1.18-REQUIREMENTS.md  v1.19-MILESTONE-AUDIT.md  v1.19-REQUIREMENTS.md  v1.19-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.20-MILESTONE-AUDIT.md  v1.20-REQUIREMENTS.md  (+54 more)
.planning/notes/: 2026-05-23-rocm-systems-gpuopen-enhancements.md  2026-06-14-native-hip-rocm-ast-reward-hack-notes.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  ROCM_TOOLCHAIN_ROUTING.md  STACK.md  SUMMARY.md
.superpowers/sdd/: final-fix-report.md  final-rereview-2.diff  final-rereview-3.diff  final-rereview.diff  final-review.diff  progress.md  task-1-brief.md  task-1-final-review.diff  task-1-report.md  task-1-rereview.diff  task-1-review.diff  task-2-brief.md  task-2-report.md  task-2-rereview.diff  task-2-review.diff  task-3-brief.md  task-3-report.md  task-3-rereview.diff  task-3-review.diff  task-4-brief.md  task-4-report.md  task-4-rereview.diff  task-4-review.diff
docker/: Dockerfile  entrypoint.sh  rocm-targets.json
docs/: ARCHITECTURE.md  CLAIMS.md  CONFIGURATION.md  COOKBOOK.md  DEVELOPMENT.md  EVALUATOR-CONTRACT.md  EVIDENCE-LIFECYCLE.md  EVIDENCE-PUBLICATION.md  GETTING-STARTED.md  README.md  RESEARCHER-GUIDE.md  SCORING-V3.md  SOLAR-BOUNDARY.md  TESTING.md  agent_feedback_sidecar.md  amd_sol.md  amd_sol_v3_fusion.md  analysis.md  authority_slice.md  compliance.md  confirmed_evidence.md  curated_rocm_slice.md  decision-modeling-research.md  decision_sidecar.md  decision_sidecar_contract.md  definition.md  original_parity.md  prerelease_artifact_bundle.md  prerelease_readiness.md  profile_summary_sidecar.md  provenance.md  public_prerelease.md  release_candidate_validation.md  research_preview.md  rocm.md  rocm_libraries.md  rocm_timing.md  rocm_toolchain_routing.md  sol_score_gap_and_amd_reuse_report.md  solution.md  (+9 more)
docs/examples/: evidence-publication-manifest.v1.example.json
docs/internal/: EVIDENCE-LIFECYCLE.md  EVIDENCE-PUBLICATION.md  RDNA4-AUTHORITY-GAP-CLOSURE.md  RDNA4-CLOCK-LOCK-EVIDENCE.md  RDNA4-DENOMINATOR-POLICY.md  aka-expansion-friendliness.md  aka-sol-task-source-research.md  amd_sol_bound_accuracy_gap.md  amd_sol_bound_closure_strategy.md  analysis.md  architecture_navigation.md  cdna3_gfx942_validation_attempt.md  cdna3_validation_readiness.md  coupling_governance.md  decision-modeling-research.md  gfx1200_sq_wave_cycles_local_patch.md  hip_execbench_practice_map.md  mi300x_validation_readiness.md  non_cdna_validation_closure.md  original_parity.md  prerelease_artifact_bundle.md  prerelease_readiness.md  rdna4_v1_9_validation_evidence.md  release_candidate_validation.md  rocm_7_2_evidence_rebuild_priorities.md  (+10 more)
scripts/: aka_equivalence_check.py  build_prerelease_artifact_bundle.py  check_coupling.py  check_current_docs.py  check_dataset_redistribution.py  check_prerelease_readiness.py  check_readability.py  check_schema_versions.py  check_solar_coverage.py  diff_matrix_reports.py  download_data.sh  download_solexecbench.py  export_matrix_schema.py  fetch_aka_source.sh  inspect_dataset.py  rdna4_clock_lock_workload_test.py  readability_baseline.json  release_candidate_validation.py  report_amd_bound_sanity.py  report_claim_upgrade.py  report_consistency.py  report_evaluation_stability.py  report_paper_denominator.py  report_parity_gaps.py  report_trust_summary.py  run_dataset.py  run_derived_isolated.py  run_docker.sh  run_rdna4_profiler_overhead_calibration.py  run_rdna4_profiler_timing_batch.py  run_rdna4_profiler_timing_coverage.py  run_rdna4_profiler_timing_smoke.py  setup_rocm_clock_sudoers.py  setup_rocm_smi_sudoers.py  solar_coverage_policy.json  solar_readability_debt.json
src/sol_execbench/_vendor/isa_spec_manager/source/isa_explorer/: CMakeLists.txt  isa_explorer.cpp
src/sol_execbench/tools/amd_isa/native/: CMakeLists.txt  bridge.cpp
tests/: conftest.py  sol_execbench_type_helpers.py
tools/: evidence_lifecycle.py
(+3187 files in other folders)
