[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sol-execbench"
version = "1.0.2"
description = "ROCm-only port of SOL ExecBench for evaluating GPU kernel solutions on AMD hardware"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch==2.10.0; sys_platform != 'linux' and sys_platform != 'win32'",
    "torch==2.10.0+rocm7.1; sys_platform == 'linux' or sys_platform == 'win32'",
    "torchvision==0.25.0; sys_platform != 'linux' and sys_platform != 'win32'",
    "torchvision==0.25.0+rocm7.1; sys_platform == 'linux' or sys_platform == 'win32'",
    "ninja>=1.13.0",
    "pydantic>=2.12.5",
    "safetensors>=0.7.0",
    "click>=8.0",
    "rich>=13.0",
    "datasets>=4.8.2",
    "triton-rocm==3.6.0; sys_platform == 'linux'",
    "torch-c-dlpack-ext>=0.1.5",
    "apache-tvm-ffi>=0.1.9",
]

[project.scripts]
sol-execbench = "sol_execbench.cli:cli"
sol-execbench-baseline = "sol_execbench.cli.baseline:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
addopts = "-n auto --dist loadgroup"
markers = [
    "cpp: test compiles HIP/C++ extensions (slow, requires ROCm compiler toolchain)",
    "requires_rocm: test requires a ROCm GPU visible through PyTorch",
    "requires_rdna4: test requires an AMD RDNA 4 GPU, such as gfx1200",
    "requires_cdna3: test requires an AMD CDNA 3 GPU, such as gfx942",
    "requires_cutile: legacy NVIDIA cuTile marker; skipped in this ROCm-only port",
]

[tool.ruff]
# Exclude generated code from linting and formatting
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".ruff_cache",
    "data",
    "examples"
]

[tool.ruff.lint]
ignore = ["E741"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-rocm71"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm-root"
url = "https://download.pytorch.org/whl/"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm71", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-rocm71", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
triton-rocm = [
  { index = "pytorch-rocm-root", marker = "sys_platform == 'linux'" },
]
