[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sol-execbench"
version = "2.0.0"
description = "ROCm-only port of SOL ExecBench for evaluating GPU kernel solutions on AMD hardware"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "torch==2.10.0; sys_platform != 'linux' or platform_machine != 'x86_64'",
    "torch==2.11.0+rocm7.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.25.0; sys_platform != 'linux' or platform_machine != 'x86_64'",
    "torchvision==0.26.0+rocm7.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "ninja>=1.13.0",
    "pydantic>=2.12.5",
    "safetensors>=0.7.0",
    "click>=8.0",
    "rich>=13.0",
    "datasets>=4.8.2",
    "triton-rocm==3.6.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch-c-dlpack-ext>=0.1.5",
    "apache-tvm-ffi>=0.1.9",
]

[project.scripts]
sol-execbench = "sol_execbench.cli.main:cli"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "ty>=0.0.39",
]

[tool.pytest.ini_options]
# DO NOT use `-n auto`: each worker loads PyTorch+ROCm (~1.5 GB), so on a 32-core
# machine `auto` spawns ~32 workers that exhaust 30 GB RAM and trigger OOM killer.
# Keep worker count ≤8 to stay within memory budget.
addopts = "-n 8 --dist loadgroup"
markers = [
    "cpp: test compiles HIP/C++ extensions (slow, requires ROCm compiler toolchain)",
    "requires_linux: test requires Linux platform semantics or tools",
    "requires_x86_64: test requires an x86_64 machine architecture",
    "requires_rocm: test requires a ROCm GPU visible through PyTorch",
    "requires_rocm_gpu: test requires a ROCm GPU visible through PyTorch",
    "requires_rocm_dev: test requires ROCm native extension development headers",
    "requires_triton_rocm: test requires the triton-rocm Python package",
    "requires_safetensors_torch: test requires safetensors.torch support",
    "docker_dependency: test verifies dependencies expected inside the Docker ROCm environment",
    "subprocess_uv: test launches uv-managed subprocesses and may need build-system dependencies cached",
    "native_extension: test loads native extension modules such as torch or safetensors",
    "native_extension_serial: native extension test skipped by default; run with: pytest tests -m native_extension_serial -n 0",
    "requires_rdna4: test requires an AMD RDNA 4 GPU, such as gfx1200",
    "requires_cdna3: test requires an AMD CDNA 3 GPU, such as gfx942",
    "requires_network: test fetches a pinned external resource and is opt-in",
    "requires_cutile: legacy NVIDIA cuTile marker; skipped in this ROCm-only port",
]

[tool.ruff]
# Exclude generated code from linting and formatting
force-exclude = true
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".ruff_cache",
    "data",
    "examples"
]

[tool.ruff.lint]
ignore = ["E741"]

[tool.ty.src]
include = ["src", "tests"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm-root"
url = "https://download.pytorch.org/whl/"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-rocm72", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
  { index = "pytorch-rocm72", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
triton-rocm = [
  { index = "pytorch-rocm-root", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
